# polynomial-manipulation

./: .gitignore  AssociativeMul.hs  CHANGELOG.md  CommutativeSum.hs  Main.hs  Polynomial.hs  README.md  main.hi  main.hs  polynomial-manipulation.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Polynomial.hs
test/: AssociativeSum.hs  CommutativeMul.hs  DistributiveMulSum.hs  PolynomialTests.hs
