cabal-version:      2.4
name:               polynomial-manipulation
version:            0.1.0.0
Build-Type:
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Pedro Gomes
maintainer:         pedromgomes29@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md


library polynomial
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends: base ^>=4.14.3.0,
    exposed-modules: Polynomial

executable app
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:-manipulation

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        polynomial
    hs-source-dirs:   app
    default-language: Haskell2010


test-suite test
    type:                     exitcode-stdio-1.0
    main-is:                  PolynomialTests.hs
    hs-source-dirs:           test
    build-depends:            base^>=4.14.3.0, QuickCheck ^>= 2.14.2,polynomial
    default-language: Haskell2010