cabal-version:      2.4
name:               polynomial-manipulation
version:            0.1.0.0
Build-Type:
author:             Pedro Gomes
maintainer:         pedromgomes29@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md


library polynomial-internal
    default-language: Haskell2010
    build-depends: base
    exposed-modules: Polynomial

executable app
    main-is:          Main.hs
    build-depends:
        base,
        polynomial-internal
    default-language: Haskell2010


test-suite commutativeSum
    type:                     exitcode-stdio-1.0
    main-is:                  CommutativeSum.hs
    build-depends:            
        base,
        polynomial-internal,
        QuickCheck
    default-language: Haskell2010

test-suite associativeSum
    type:                     exitcode-stdio-1.0
    main-is:                  AssociativeSum.hs
    build-depends:            
        base,
        polynomial-internal,
        QuickCheck
    default-language: Haskell2010

test-suite commutativeMul
    type:                     exitcode-stdio-1.0
    main-is:                  CommutativeMul.hs
    build-depends:            
        base,
        polynomial-internal,
        QuickCheck
    default-language: Haskell2010

test-suite associativeMul
    type:                     exitcode-stdio-1.0
    main-is:                  AssociativeMul.hs
    build-depends:            
        base,
        polynomial-internal,
        QuickCheck
    default-language: Haskell2010

test-suite distributiveMulSum
    type:                     exitcode-stdio-1.0
    main-is:                  DistributiveMulSum.hs
    build-depends:            
        base,
        polynomial-internal,
        QuickCheck
    default-language: Haskell2010